@@ -1,5 +1,12 @@
 2019-02-04  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>
 
+	* arts-2-3-1197
+
+	* 3rdparty/invlib/src/invlib/map.cc: Forgot to change syntax
+	  here as well.
+
+2019-02-04  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>
+
 	* arts-2-3-1196
 
 	* 3rdparty/invlib/src/invlib/map.h: <typename> typename syntax for
